--- a/package.json
+++ b/package.json
@@ -10,12 +10,35 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@nx/angular": "^22.1.0",
     "@nx/eslint": "^22.1.0",
     "@nx/jest": "^22.1.0",
     "@nx/js": "^22.1.0",
     "@nx/nest": "^22.1.0",
-    "nx": "22.1.0"
+    "@nx/node": "22.1.0",
+    "@nx/web": "22.1.0",
+    "@nx/webpack": "22.1.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
+    "nx": "22.1.0",
+    "prettier": "^2.6.2",
+    "tslib": "^2.3.0",
+    "typescript": "~5.9.2",
+    "webpack": "^5.103.0",
+    "webpack-cli": "^5.1.4"
   },
-  "nx": {}
+  "nx": {},
+  "dependencies": {
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "axios": "^1.6.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
